app/css/app.css
body {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 13px;
  line-height: 18px;
  overflow: hidden;
}

a {
  text-decoration: none;
  -webkit-user-drag: none;
}

img {
  -webkit-user-drag: none;
}

#window-container {
  -webkit-box-align: stretch;
  -webkit-box-orient: horizontal;
  display: -webkit-box;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

#sidebar {
  background-color: #333;
  color: white;
  overflow: hidden;
  -webkit-transition: width 0.2s ease-in-out;
  width: 0;
}

#sidebar.open {
  width: 220px;
  overflow-y: hidden;
}

#sidebar h1 {
  margin: 24px;
}

#sidebar ul {
  margin: 24px;
  padding: 0;
  font-size: 140%;
  list-style-type: none;
}

#sidebar ul li {
  margin: 10px 0px 10px 0px;
}

#sidebar ul li a {
  color: white;
}

#tabs-list li a.tabchanged:after {
  content: " *";
}

#main-container {
  -webkit-box-align: stretch;
  -webkit-box-flex: 1.0;
  -webkit-box-orient: vertical;
  display: -webkit-box;
}

header {
  -webkit-app-region: drag;
  background-color: #EEE;
  border-bottom: 1px solid #888;
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  display: -webkit-box;
  height: 35px;
  position: relative;
  text-align: center;
  user-select: none;
}

#toggle-sidebar {
  -webkit-app-region: no-drag;
  color: #999;
  position: absolute;
  top: 5px;
  left: 8px;
}

#search-button {
  -webkit-app-region: no-drag;
  color: #999;
  display: box;
  font-size: 150%;
  position: absolute;
  top: 10px;
  left: 48px;
}

#search-button:hover {
  color: #666;
}

#search-button.hidden {
  display: none;
}

#search-input {
  -webkit-app-region: no-drag;
  border: 1px solid #ddd;
  border-radius: 1px;
  position: absolute;
  top: 7px;
  left: 48px;
  width: 0;
  -webkit-transition: width 0.5s ease-in-out;
}

#search-input.hidden {
  display: none;
}

#search-input.open {
  width: 180px;
}

#title-filename {
  color: #777;
  font-size: 120%;
  font-weight: bold;
  margin-left: auto;
  margin-right: auto;
}

#window-icons {
  -webkit-app-region: no-drag;
  position: absolute;
  top: 9px;
  right: 8px;
  z-index: 2;
}

#window-icons a {
  color: #979797;
  font-size: 1.2em;
  padding: 1px;
  position: relative;
}

#window-icons a:hover {
  color: #444;
}

#editor {
  -webkit-box-flex: 1.0;
  position: relative;
}

